--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,7 @@ main {
   display: grid;
   grid-template: auto auto / repeat(5, 1fr);
   gap: 20px;
+  margin-top: 2rem;
 }
 
 .die {
@@ -38,6 +39,39 @@ main {
   cursor: pointer;
   background-color: white;
   font-size: 2rem;
+}
+
+.hold {
+  background-color: #59e391;
+}
+
+.roll {
+  color: white;
+  background: #5035ff;
+  box-shadow: 0px 3.2px 7.68px rgba(0, 0, 0, 0.18);
+  border-radius: 3.81277px;
+  width: 6rem;
+  height: 3rem;
+  font-weight: 700;
+  margin-top: 2rem;
+  border: none;
+  cursor: pointer;
+}
+
+.roll:active {
+  box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
+}
+
+.title {
+  font-size: 40px;
+  margin: 0;
+}
+
+.instructions {
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  margin-top: 0;
+  text-align: center;
 }
 
 @media (max-width: 400px) {
